--- a/static/css/index.css
+++ b/static/css/index.css
@@ -136,3 +136,9 @@ body {
 .section figure figcaption {
   margin-top: 1rem;
 }
+
+.subsection-title {
+  font-size: 1.4rem;
+  font-weight: bold;
+  margin: 1.5rem 0 1rem 0;
+}
