refactor: improve styling for math content and ordered lists for better layout

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -142,3 +142,13 @@ body {
   font-weight: bold;
   margin: 1.5rem 0 1rem 0;
 }
+
+.math-content {
+  margin: 1rem 0;
+}
+ol {
+  padding-left: 1.5rem;
+}
+li {
+  margin: 0.5rem 0;
+}
